--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -227,3 +227,14 @@
     url = {https://github.com/NextGen73/Bachelor_GewEwZaehlung/tree/main/Programmierung},
     urldate = {2024-09-15T21:25:00},
 }
+
+@inproceedings{brücken,
+    title={Dynamic behaviour and collapses of early suspension bridges},
+    author={Tilly, Graham P},
+    booktitle={Proceedings of the Institution of Civil Engineers-Bridge Engineering},
+    volume={164},
+    number={2},
+    pages={75--80},
+    year={2011},
+    organization={Thomas Telford Ltd}
+}
