--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -196,8 +196,8 @@ Tag der Einreichung: \datum
             Man beachte, dass für $B=\In$ die Gleichung (\ref{eqn: allg EW Problem}) zu
             $$(A-\lambda\In)x=0 \Leftrightarrow Ax = \lambda x,$$
             wird, also genau die Form des \zitat{speziellen Eigenwertproblems}(vgl. \cite[S. 381]{maschinendynamikDresig}).
-% Definiere lamA
-            Daher wird die Suche nach den $\lambda\in\C$, die (\ref{eqn: allg EW Problem}) erfüllen,
+            Da für ein spezielles Eigenwertproblem die Menge \lamA gesucht wird,
+            wird die Suche nach den $\lambda\in\C$, die (\ref{eqn: allg EW Problem}) erfüllen,
             auch \zitat{allgemeines Eigenwertproblem}\cite[S. 380]{maschinendynamikDresig} genannt, da sie eine größere Klasse von Gleichungen abdeckt.
             Falls man $\AlamB$ durch die Matrix $C$ ersetzt, so entsteht aus (\ref{eqn: allg EW Problem}) das lineare homogene Gleichungssystem
             $$Cx=0,\quad x\ne 0$$
