Verzeichnisse taucht in Inhaltsanhabe auf

--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -1584,7 +1584,7 @@ Tag der Einreichung: \datum
       Dazu wäre Hutchinson's Schätzer (vgl. \cite[S. 142]{hutch++Meyer}), oder dessen Erweiterung \zitat{Hutch++}\cite[S. 142]{hutch++Meyer} nützlich.
       Solche Überlegungen könnten in einer weiterführenden Arbeit behandelt und mit den hier erhaltenen Ergebnissen verglichen werden.
 
-\chapter*{Verzeichnisse}
+\chapter{Verzeichnisse}
       \printbibliography
       \printacronyms[name=Abkürzungsverzeichnis, include={abbrev}]
       %%
