--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -26,8 +26,8 @@
 \newcommand{\ort}{Riesa}
 \newcommand{\betreuer}{Prof. Dr. Oliver Sander}
 \newcommand{\institut}{Institut für Numerische Mathematik}
-\newcommand{\thema}{Gewichtete Eigenwert-Zählung auf einem Intervall}
-\newcommand{\datum}{20.\ 09.\ 2024} %Format tt.\ mm.\ jjjj
+\newcommand{\thema}{Gewichtete Zählung von Eigenwerten auf einem Intervall}
+\newcommand{\datum}{25.\ 09.\ 2024} %Format tt.\ mm.\ jjjj
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
