--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -9,7 +9,7 @@
 \usepackage{amsmath, amsfonts, amssymb, amsthm} %% mathematics tools
 \usepackage{csquotes}
 \usepackage[draft]{listofsymbols}
-\usepackage[backend=biber, urldateusetime=true, sorting=none]{biblatex} %% Literature citing engine
+\usepackage[backend=biber, sorting=none, style=iso-numeric]{biblatex} %% Literature citing engine
 \usepackage{subcaption}
 \usepackage{graphicx}
 \usepackage{algorithm}
