--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -100,52 +100,52 @@
     title={Prinzip von d'Alembert - Physik},
     author={Simon Julius Dücker},
     url={https://www.ingenieurkurse.de/physik/kinetik-ursache-von-bewegungen/prinzip-von-d-alembert.html},
-    urldate={2024-09-04T09:41:00}
+    urldate={2024-09-04}
 }
 
 @online{präsiLängsschwinger,
     title={5. Mehrmassenschwinger},
     author={Prof. Dr.-Ing. T. Preussler},
     url={https://www.umwelt-campus.de/fileadmin/Umwelt-Campus/User/TPreussler/Download/Maschinendynamik_und_Betriebsfestigkeit/Foliensaetze/05_Mehrmassenschwinger_1.pdf},
-    urldate={2024-09-04T09:44:00}
+    urldate={2024-09-04}
 }
 
 @online{federkraft,
     title={Gewichtskraft, Federkraft - Physik},
     author={Simon Julius Dücker},
     url={https://www.ingenieurkurse.de/physik/kinetik-ursache-von-bewegungen/beispiele-fuer-kraefte/gewichtskraft-federkraft.html},
-    urldate={2024-09-04T09:47:00}
+    urldate={2024-09-04}
 }
 
 @online{trägheitskraft,
     author = {Prof. Dr.-Ing. Dr. Sabine Kunst},
     title = {Kraft und Bewegungsänderung},
     url = {https://www.leifiphysik.de/mechanik/kraft-und-bewegungsaenderung/grundwissen/traegheitssatz-im-beschleunigten-system},
-    urldate={2024-09-14T22:15:00}
+    urldate={2024-09-14}
 }
 
 @online{BildKräfteFeder,
     title={Einfachste mechanische Schwingsysteme},
-    author={},
+    author={o.V.},
     url={https://www.georgi-dd.de/files/a22.pdf},
-    urldate={2024-09-04T09:49:00}
+    urldate={2024-09-04}
 }
 
-% @misc {LinAlgKowalsky,
-%     author = { Kowalsky, Hans-Joachim },
-%     title = { Lineare Algebra },
-%     edition = { 2. Aufl. Reprint 2019 } ,
-%     publisher = {De Gruyter},
-%     isbn = {9783111337579},
-%     year = {2019},
-%     url = { https://katalog.slub-dresden.de/id/0-1667384449 }
-% }
+@misc {LinAlgKowalsky,
+    author = { Kowalsky, Hans-Joachim },
+    title = { Lineare Algebra },
+    edition = { 2. Aufl. Reprint 2019 } ,
+    publisher = {De Gruyter},
+    isbn = {9783111337579},
+    year = {2019},
+    url = { https://katalog.slub-dresden.de/id/0-1667384449 }
+}
 
 @online{conjugateTranspose,
     author={Weisstein, Eric W.},
     title={"Conjugate Transpose."},
     url={https://mathworld.wolfram.com/ConjugateTranspose.html},
-    urldate={2024-09-06T10:16:00}
+    urldate={2024-09-06}
 }
 
 @misc{complexAnalysis,
@@ -167,10 +167,10 @@
 }
 
 @online{derivativeInverseMatrix,
-    author = {matte (1858)},
+    author = {matte},
     title = {derivative of inverse matrix},
     url = {https://planetmath.org/derivativeofinversematrix},
-    urldate = {},
+    urldate = {2024-09-24}
 }
 
 @phdthesis{matrixPencilDeutsch,
@@ -223,9 +223,10 @@
 }
 
 @online{github,
+    title={Bachelor{\_}GewEwZahlung/Programmierung},
     author = {Noah Göpel},
     url = {https://github.com/NextGen73/Bachelor_GewEwZaehlung/tree/main/Programmierung},
-    urldate = {2024-09-15T21:25:00},
+    urldate = {2024-09-24},
 }
 
 @inproceedings{brücken,
