--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -167,7 +167,7 @@
 }
 
 @online{derivativeInverseMatrix,
-    author = {matte},
+    author = {o.V.},
     title = {derivative of inverse matrix},
     url = {https://planetmath.org/derivativeofinversematrix},
     urldate = {2024-09-24}
